env_config/tests/ui/unit_struct.stderr
error: cannot be derived for unit structs
 --> tests/ui/unit_struct.rs:3:10
  |
3 | #[derive(EnvConfig)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `EnvConfig` (in Nightly builds, run with -Z macro-backtrace for more info)
