env_config/tests/ui/unit_struct.rs
use env_config::{EnvConfig};

#[derive(EnvConfig)]
struct MyLovelyUnitStruct;

fn main() {}
